# basis-vectors-persona-4079-gemini

./: .resource_finder_complete  README.md  REPORT.md  explore_datasets.py  literature_review.md  planning.md  pyproject.toml  resources.md  test3.txt  test4.txt
.idea-explorer/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: .gitignore  README.md
logs/: execution_gemini_transcript.jsonl  paper_writer_prompt.txt  resource_finder_gemini_transcript.jsonl  session_instructions.txt
paper_draft/: main.tex  references.bib
paper_draft/commands/: macros.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
paper_draft/tables/: alignment_table.tex  evr_table.tex
paper_search_results/: persona_representations_in_language_model_residual_streams_PCA_20260228_230424.jsonl
papers/: README.md
papers/pages/: 2505.24539v3_localizing_persona_manifest.txt  2512.07092v1_geometry_of_persona_manifest.txt  2602.07164v1_your_language_model_secretly_contains_personality__manifest.txt
results/: metrics.json  steering_results.json
src/: plot_alignments.py  research.py  steering_experiment.py
